Runs without errors

--- a/training.ipynb
+++ b/training.ipynb
@@ -20,13 +20,14 @@
     "from sklearn.ensemble import IsolationForest\n",
     "from sklearn.model_selection import train_test_split, GridSearchCV\n",
     "import joblib\n",
+    "from sklearn.metrics import classification_report\n",
     "\n",
     "\n",
     "DATA_DIR = '/cluster/home/nteutschm/eqdetection/data/'\n",
     "#DATA_DIR = 'Data/'\n",
     "RANDOM_STATE = 86\n",
-    "MODEL_PATH = '/cluster/scratch/nteutschm/eqdetection/models/'\n",
-    "SAVE_PATH = '/cluster/scratch/nteutschm/eqdetection/predictions/'"
+    "MODEL_PATH = '/cluster/scratch/nteutschm/eqdetection/models/IsolationForest'\n",
+    "SAVE_PATH = '/cluster/scratch/nteutschm/eqdetection/predictions/predictions.csv'"
    ]
   },
   {
@@ -271,8 +272,8 @@
     "        features['height'] = df.attrs.get('height')\n",
     "        \n",
     "        for comp in components_offsets:\n",
-    "            offset_series = pd.Series(0, index=df.index)\n",
-    "            offset_error_series = pd.Series(0, index=df.index)\n",
+    "            offset_series = pd.Series(0.0, index=df.index)\n",
+    "            offset_error_series = pd.Series(0.0, index=df.index)\n",
     "\n",
     "            for offset in df.attrs['offsets'][comp]['offsets']:\n",
     "                offset_series.loc[offset['date']] = offset['value']\n",
@@ -282,10 +283,10 @@
     "            features[f'{comp}_offset_error'] = offset_error_series\n",
     "        \n",
     "        for comp in components_offsets:\n",
-    "            decay_value_series = pd.Series(0, index=df.index)\n",
-    "            decay_tau_series = pd.Series(0, index=df.index)\n",
-    "            decay_error_series = pd.Series(0, index=df.index)\n",
-    "            decay_type_series = pd.Series(0, index=df.index)\n",
+    "            decay_value_series = pd.Series(0.0, index=df.index)\n",
+    "            decay_tau_series = pd.Series(0.0, index=df.index)\n",
+    "            decay_error_series = pd.Series(0.0, index=df.index)\n",
+    "            decay_type_series = pd.Series(0.0, index=df.index)\n",
     "\n",
     "            for decay in df.attrs['offsets'][comp]['ps_decays']:\n",
     "                decay_value_series.loc[decay['date']] = decay['value']\n",
@@ -308,19 +309,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train_isolation_forest(X):\n",
-    "    X_train, y_test = train_test_split(X, test_size=0.3, random_state=RANDOM_STATE)\n",
-    "    y_test = pd.concat(y_test, axis=0)\n",
-    "    X_test = y_test.drop(columns=[col for col in y_test.columns if 'offset' in col or 'decay' in col])\n",
-    "    \n",
-    "    model = IsolationForest(contamination=0.05, random_state=RANDOM_STATE)\n",
-    "    model.fit(X_train)\n",
-    "\n",
-    "    joblib.dump(model, MODEL_PATH)\n",
-    "    \n",
-    "    test_predictions = model.predict(X_test)\n",
-    "\n",
-    "    return model, test_predictions"
+    "def save_predictions(test_predictions):\n",
+    "    test_predictions_df = pd.DataFrame(test_predictions, columns=['Predictions'])\n",
+    "    test_predictions_df.to_csv(SAVE_PATH, index=True)"
    ]
   },
   {
@@ -329,9 +320,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def save_predictions(test_predictions):\n",
-    "    test_predictions_df = pd.DataFrame(test_predictions, columns=['Predictions'])\n",
-    "    test_predictions_df.to_csv(SAVE_PATH, index=False)"
+    "def train_isolation_forest(X):\n",
+    "    X_train, y_test = train_test_split(X, test_size=0.3, random_state=RANDOM_STATE)\n",
+    "    y_test = pd.concat(y_test, axis=0)\n",
+    "    \n",
+    "    X_test = y_test.copy()\n",
+    "    X_test[[col for col in y_test.columns if 'offset' in col or 'decay' in col]] = 0\n",
+    "    \n",
+    "    model = IsolationForest(contamination=0.05, random_state=RANDOM_STATE)\n",
+    "    model.fit(pd.concat(X_train, axis=0))\n",
+    "\n",
+    "    joblib.dump(model, MODEL_PATH)\n",
+    "    \n",
+    "    test_predictions = model.predict(X_test)\n",
+    "    \n",
+    "    save_predictions(test_predictions)\n",
+    "    \n",
+    "    report = classification_report(y_test['n_offset_value'].apply(lambda x: 1 if x == 0 else -1), test_predictions, target_names=['Offset', 'No Offset'])\n",
+    "\n",
+    "    return model, test_predictions, report"
    ]
   },
   {
@@ -344,8 +351,8 @@
     "    dfs = organize_files()\n",
     "    cleaned_dfs = clean_dataframes(dfs, missing_value_threshold=0.2)\n",
     "    X = extract_features(cleaned_dfs)\n",
-    "    model, test_predictions = train_isolation_forest(X)\n",
-    "    save_predictions(test_predictions)"
+    "    model, test_predictions, report = train_isolation_forest(X)\n",
+    "    print(report)"
    ]
   },
   {
