First ML algorithms implemented

--- a/training.ipynb
+++ b/training.ipynb
@@ -17,17 +17,18 @@
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.dates as mdates\n",
     "from collections import Counter\n",
-    "from sklearn.ensemble import IsolationForest\n",
-    "from sklearn.model_selection import train_test_split, GridSearchCV\n",
+    "from sklearn.ensemble import IsolationForest, HistGradientBoostingClassifier, RandomForestClassifier\n",
+    "from sklearn.model_selection import train_test_split, GridSearchCV, StratifiedKFold\n",
+    "from sklearn.utils.class_weight import compute_class_weight\n",
     "import joblib\n",
     "from sklearn.metrics import classification_report\n",
     "\n",
     "\n",
     "DATA_DIR = '/cluster/home/nteutschm/eqdetection/data/'\n",
-    "#DATA_DIR = 'Data/'\n",
     "RANDOM_STATE = 86\n",
-    "MODEL_PATH = '/cluster/scratch/nteutschm/eqdetection/models/IsolationForest'\n",
-    "SAVE_PATH = '/cluster/scratch/nteutschm/eqdetection/predictions/predictions.csv'"
+    "MODEL_TYPE = 'HistGradientBoosting' # IsolationForest HistGradientBoosting RandomForest\n",
+    "MODEL_PATH = f'/cluster/scratch/nteutschm/eqdetection/models/{MODEL_TYPE}.pkl'\n",
+    "SAVE_PATH = f'/cluster/scratch/nteutschm/eqdetection/predictions/{MODEL_TYPE}.csv'"
    ]
   },
   {
@@ -44,6 +45,23 @@
    "outputs": [],
    "source": [
     "def get_offsets(header_lines):\n",
+    "    \"\"\"\n",
+    "    Extracts offset and postseismic decay information from the header lines of a GNSS file.\n",
+    "\n",
+    "    The function captures both coseismic and non-coseismic offsets, along with postseismic decays, for \n",
+    "    north (N), east (E), and up (U) components. It parses lines starting with '#' and collects the relevant \n",
+    "    values into a structured dictionary categorized by the component.\n",
+    "\n",
+    "    Parameters:\n",
+    "    - header_lines (list of str): Lines from the file that contain metadata and comments starting with '#'.\n",
+    "\n",
+    "    Returns:\n",
+    "    - components (dict): A dictionary with keys 'n', 'e', and 'u' representing the north, east, and up components.\n",
+    "      Each component holds a dictionary with:\n",
+    "        - 'offsets': A list of dictionaries containing offset information (value, error, date, coseismic flag).\n",
+    "        - 'ps_decays': A list of dictionaries containing postseismic decay information (value, error, tau, date, type).\n",
+    "    \"\"\"\n",
+    "    \n",
     "    # Capture important information from the header\n",
     "    offset_pattern = re.compile(r\"#\\s*(\\*?)\\s*offset\\s+\\d+:?\\s+([-\\d.]+)\\s+\\+/\\-\\s+([-\\d.]+)\\s+mm.*?\\((\\d{4}-\\d{2}-\\d{2}).*?\\)\")\n",
     "    ps_decay_pattern = re.compile(r'#!?\\s*ps decay\\s+\\d:\\s*(-?\\d+\\.\\d+)\\s+\\+/-\\s+(\\d+\\.\\d+)\\s+mm\\s+\\((\\d{4}-\\d{2}-\\d{2})\\s+\\[(\\d{4}\\.\\d+)\\]\\);\\s*tau:\\s*(\\d+)\\s+days')\n",
@@ -92,6 +110,21 @@
     "    return components\n",
     "\n",
     "def read_file(filename):\n",
+    "    \"\"\"\n",
+    "    Reads a GNSS file, extracting both header and data information into a pandas DataFrame.\n",
+    "\n",
+    "    The function processes the header to extract metadata (e.g., station coordinates, height, offsets, decays) \n",
+    "    and processes the data section to extract time-series GNSS measurements. It combines these into a DataFrame \n",
+    "    with attributes containing additional metadata.\n",
+    "\n",
+    "    Parameters:\n",
+    "    - filename (str): The path to the file containing GNSS data.\n",
+    "\n",
+    "    Returns:\n",
+    "    - data (pandas.DataFrame): A DataFrame containing the time-series GNSS data (N, E, U components, sigmas, correlations),\n",
+    "      indexed by date. The DataFrame has additional attributes storing station geometry (latitude, longitude), height, \n",
+    "      and offset/decay information.\n",
+    "    \"\"\"\n",
     "    \n",
     "    with open(DATA_DIR+filename, 'r') as file:\n",
     "        lines = file.readlines()\n",
@@ -135,21 +168,6 @@
     "    data.attrs['offsets'] = offsets\n",
     "    \n",
     "    return data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def organize_files():\n",
-    "    gdfs = []\n",
-    "    dir = Path(DATA_DIR)\n",
-    "    for file_path in dir.iterdir():\n",
-    "        if file_path.is_file():\n",
-    "            gdfs.append(read_file(file_path.name))\n",
-    "    return gdfs"
    ]
   },
   {
@@ -245,13 +263,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def extract_features(dfs):\n",
+    "def extract_features(dfs, interpolate=True):\n",
     "    \"\"\"\n",
     "    Extracts relevant features from a list of dataframes, including displacement values, \n",
     "    errors, offsets, decay information, station locations, and heights.\n",
     "\n",
     "    Parameters:\n",
     "    dfs (list): List of dataframes with GNSS data.\n",
+    "    interpolate (bool): Whether to interpolate missing values or retain `None`.\n",
     "\n",
     "    Returns:\n",
     "    DataFrame: Combined dataframe with all extracted features.\n",
@@ -262,7 +281,8 @@
     "    for df in dfs:\n",
     "        features = df[['N', 'E', 'U', 'N sig', 'E sig', 'U sig', 'CorrNE', 'CorrNU', 'CorrEU']].copy()\n",
     "        \n",
-    "        features.interpolate(method='time', inplace=True)\n",
+    "        if interpolate:\n",
+    "            features.interpolate(method='time', inplace=True)\n",
     "\n",
     "        location = df.attrs.get('geometry')\n",
     "        if isinstance(location, Point):\n",
@@ -272,8 +292,8 @@
     "        features['height'] = df.attrs.get('height')\n",
     "        \n",
     "        for comp in components_offsets:\n",
-    "            offset_series = pd.Series(0.0, index=df.index)\n",
-    "            offset_error_series = pd.Series(0.0, index=df.index)\n",
+    "            offset_series = pd.Series(0.0 if interpolate else None, index=df.index)\n",
+    "            offset_error_series = pd.Series(0.0 if interpolate else None, index=df.index)\n",
     "\n",
     "            for offset in df.attrs['offsets'][comp]['offsets']:\n",
     "                offset_series.loc[offset['date']] = offset['value']\n",
@@ -283,10 +303,10 @@
     "            features[f'{comp}_offset_error'] = offset_error_series\n",
     "        \n",
     "        for comp in components_offsets:\n",
-    "            decay_value_series = pd.Series(0.0, index=df.index)\n",
-    "            decay_tau_series = pd.Series(0.0, index=df.index)\n",
-    "            decay_error_series = pd.Series(0.0, index=df.index)\n",
-    "            decay_type_series = pd.Series(0.0, index=df.index)\n",
+    "            decay_value_series = pd.Series(0.0 if interpolate else None, index=df.index)\n",
+    "            decay_tau_series = pd.Series(0.0 if interpolate else None, index=df.index)\n",
+    "            decay_error_series = pd.Series(0.0 if interpolate else None, index=df.index)\n",
+    "            decay_type_series = pd.Series(0.0 if interpolate else None, index=df.index)\n",
     "\n",
     "            for decay in df.attrs['offsets'][comp]['ps_decays']:\n",
     "                decay_value_series.loc[decay['date']] = decay['value']\n",
@@ -310,8 +330,12 @@
    "outputs": [],
    "source": [
     "def save_predictions(test_predictions):\n",
-    "    test_predictions_df = pd.DataFrame(test_predictions, columns=['Predictions'])\n",
-    "    test_predictions_df.to_csv(SAVE_PATH, index=True)"
+    "    test_predictions.to_csv(SAVE_PATH, index=True)\n",
+    "    \n",
+    "def compute_weights(train_labels):\n",
+    "    classes = np.unique(train_labels)\n",
+    "    class_weights = compute_class_weight(class_weight='balanced', classes=classes, y=train_labels)\n",
+    "    return {c: w for c, w in zip(classes, class_weights)}"
    ]
   },
   {
@@ -320,24 +344,153 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train_isolation_forest(X):\n",
-    "    X_train, y_test = train_test_split(X, test_size=0.3, random_state=RANDOM_STATE)\n",
-    "    y_test = pd.concat(y_test, axis=0)\n",
+    "def prepare_data(X):\n",
+    "    # Split into train and test sets\n",
+    "    X_train, X_test = train_test_split(X, test_size=0.3, random_state=RANDOM_STATE)\n",
     "    \n",
-    "    X_test = y_test.copy()\n",
-    "    X_test[[col for col in y_test.columns if 'offset' in col or 'decay' in col]] = 0\n",
+    "    X_train = pd.concat(X_train, axis=0)\n",
+    "    X_test = pd.concat(X_test, axis=0)\n",
     "    \n",
-    "    model = IsolationForest(contamination=0.05, random_state=RANDOM_STATE)\n",
-    "    model.fit(pd.concat(X_train, axis=0))\n",
+    "    # Create a binary target column indicating if any offset occurs in N, E, or U components\n",
+    "    train_labels = X_train[['n_offset_value', 'e_offset_value', 'u_offset_value']].apply(\n",
+    "    lambda row: 1 if any(val != 0 and not pd.isna(val) for val in row) else 0, axis=1)\n",
+    "    \n",
+    "    test_labels = X_test[['n_offset_value', 'e_offset_value', 'u_offset_value']].apply(\n",
+    "    lambda row: 1 if any(val != 0 and not pd.isna(val) for val in row) else 0, axis=1)\n",
+    "    \n",
+    "    class_weights = compute_weights(train_labels)\n",
+    "    \n",
+    "    return X_train, X_test, train_labels, test_labels, class_weights"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def optimize_random_forest(X_train, y_train, weights):\n",
+    "    param_grid = {\n",
+    "        'n_estimators': [100, 200, 500],\n",
+    "        'max_depth': [10, 20, 30],\n",
+    "        'class_weight': [weights],  # Use the pre-calculated class weights\n",
+    "        'random_state': [RANDOM_STATE]\n",
+    "    }\n",
+    "    rf = RandomForestClassifier()\n",
+    "    stratified_cv = StratifiedKFold(n_splits=5, shuffle=True, random_state=RANDOM_STATE)\n",
+    "    grid_search = GridSearchCV(rf, param_grid, cv=stratified_cv, scoring='f1_weighted', verbose=1, n_jobs=-1, pre_dispatch='2*n_jobs')\n",
+    "    grid_search.fit(X_train, y_train)\n",
+    "    \n",
+    "    print(\"Best RandomForest parameters found: \", grid_search.best_params_)\n",
+    "    \n",
+    "    return grid_search.best_estimator_\n",
     "\n",
+    "def optimize_isolation_forest(X_train, y_train):\n",
+    "    param_grid = {\n",
+    "        'n_estimators': [100, 200, 300],\n",
+    "        'max_samples': [0.8, 1.0],\n",
+    "        'contamination': [0.001, 0.002, 0.005],  # Based on known imbalance\n",
+    "        'random_state': [RANDOM_STATE]\n",
+    "    }\n",
+    "    iso_forest = IsolationForest()\n",
+    "    stratified_cv = StratifiedKFold(n_splits=5, shuffle=True, random_state=RANDOM_STATE)\n",
+    "    grid_search = GridSearchCV(iso_forest, param_grid, cv=stratified_cv, scoring='f1_weighted', verbose=1, n_jobs=-1, pre_dispatch='2*n_jobs')\n",
+    "    # Have to give the labels as input even though IsolationForest uses no labels and the input is optional as otherwise there is an error. No idea why. \n",
+    "    grid_search.fit(X_train, y_train)\n",
+    "    \n",
+    "    print(\"Best IsolationForest parameters found: \", grid_search.best_params_)\n",
+    "    \n",
+    "    return grid_search.best_estimator_\n",
+    "\n",
+    "def optimize_hist_gradient_boosting(X_train, y_train, weights):\n",
+    "    param_grid = {\n",
+    "        'learning_rate': [0.01, 0.1, 0.2],\n",
+    "        'max_iter': [100, 200, 300],\n",
+    "        'max_depth': [5, 10, 15],\n",
+    "        'class_weight': [weights],\n",
+    "        'random_state': [RANDOM_STATE]\n",
+    "    }\n",
+    "        \n",
+    "    hgb = HistGradientBoostingClassifier()\n",
+    "    stratified_cv = StratifiedKFold(n_splits=5, shuffle=True, random_state=RANDOM_STATE)\n",
+    "    grid_search = GridSearchCV(\n",
+    "        estimator=hgb,\n",
+    "        param_grid=param_grid,\n",
+    "        cv=stratified_cv,\n",
+    "        scoring='f1_weighted',\n",
+    "        verbose=1,\n",
+    "        n_jobs=-1,\n",
+    "        pre_dispatch='2*n_jobs'\n",
+    "    )\n",
+    "    grid_search.fit(X_train, y_train)\n",
+    "    \n",
+    "    print(\"Best HistGradientBoosting parameters found: \", grid_search.best_params_)\n",
+    "    \n",
+    "    return grid_search.best_estimator_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train_model(X, model_type):\n",
+    "    \"\"\"\n",
+    "    Trains a model based on the specified type using both North, East, and Up component data.\n",
+    "\n",
+    "    Parameters:\n",
+    "    X (DataFrame): Feature set, including target values.\n",
+    "    model_type (str): The type of model to train ('IsolationForest' or 'HistGradientBoosting').\n",
+    "\n",
+    "    Returns:\n",
+    "    model: Trained model.\n",
+    "    test_predictions: Predictions on the test set.\n",
+    "    report: Classification report for the test set.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    X_train, X_test, train_labels, test_labels, weights = prepare_data(X)\n",
+    "    \n",
+    "    # Imbalance test: No offsets: 2133084, offsets: 525\n",
+    "\n",
+    "    # Set offset/decay columns based on model type\n",
+    "    if model_type == 'IsolationForest':\n",
+    "        # For IsolationForest, ignore decays and offset information (unsupervised)\n",
+    "        columns = [col for col in X_test.columns if 'offset' in col or 'decay' in col]\n",
+    "        X_test.drop(columns, axis=1, inplace=True)\n",
+    "        X_train.drop(columns, axis=1, inplace=True)\n",
+    "        model = optimize_isolation_forest(X_train, train_labels)\n",
+    "        test_predictions = model.predict(X_test)\n",
+    "        \n",
+    "    elif model_type == 'RandomForest':\n",
+    "        # For RandomForest, ignore decays and offset information\n",
+    "        columns = [col for col in X_test.columns if 'offset' in col or 'decay' in col]\n",
+    "        X_test.drop(columns, axis=1, inplace=True)\n",
+    "        X_train.drop(columns, axis=1, inplace=True)\n",
+    "        model = optimize_random_forest(X_train, train_labels, weights)\n",
+    "        test_predictions = model.predict(X_test)\n",
+    "        \n",
+    "    \n",
+    "    elif model_type == 'HistGradientBoosting':\n",
+    "        # For HistGradientBoosting, set offset and decay columns to None in test data (supervised using binary training labels)\n",
+    "        X_test[[col for col in X_test.columns if 'offset' in col or 'decay' in col]] = None\n",
+    "        model = optimize_hist_gradient_boosting(X_train, train_labels, weights)\n",
+    "        test_predictions = model.predict(X_test)\n",
+    "        \n",
+    "    else:\n",
+    "        raise ValueError('Used Model Type not implement. Please control spelling!')\n",
+    "    \n",
+    "    test_predictions = pd.Series(test_predictions, index=X_test.index)\n",
+    "    \n",
     "    joblib.dump(model, MODEL_PATH)\n",
-    "    \n",
-    "    test_predictions = model.predict(X_test)\n",
-    "    \n",
     "    save_predictions(test_predictions)\n",
     "    \n",
-    "    report = classification_report(y_test['n_offset_value'].apply(lambda x: 1 if x == 0 else -1), test_predictions, target_names=['Offset', 'No Offset'])\n",
-    "\n",
+    "    if model_type == 'IsolationForest':\n",
+    "        test_predictions = test_predictions.map({-1: 1, 1: 0})\n",
+    "    report = classification_report(test_labels, test_predictions, target_names=['No Coseismic Event', 'Coseismic Event'])\n",
+    "    \n",
+    "    print(f\"Class weights used during training:\\nNo Coseismic Event: {weights[0]} \\nCoseismic Event: {weights[1]}\")\n",
+    "    \n",
     "    return model, test_predictions, report"
    ]
   },
@@ -348,11 +501,20 @@
    "outputs": [],
    "source": [
     "def main():\n",
-    "    dfs = organize_files()\n",
+    "    dfs = []\n",
+    "    dir = Path(DATA_DIR)\n",
+    "    for file_path in dir.iterdir():\n",
+    "        if file_path.is_file():\n",
+    "            dfs.append(read_file(file_path.name))\n",
+    "\n",
     "    cleaned_dfs = clean_dataframes(dfs, missing_value_threshold=0.2)\n",
-    "    X = extract_features(cleaned_dfs)\n",
-    "    model, test_predictions, report = train_isolation_forest(X)\n",
-    "    print(report)"
+    "    \n",
+    "    # HistGradientBoosting designed to deal with None data -> No interpolation needed\n",
+    "    interpolate = False if MODEL_TYPE == 'HistGradientBoosting' else True\n",
+    "    X = extract_features(cleaned_dfs, interpolate=interpolate)\n",
+    "    \n",
+    "    model, test_predictions, report = train_model(X, model_type=MODEL_TYPE)\n",
+    "    print(f'Report for model: {MODEL_TYPE} \\n {report}')"
    ]
   },
   {
