--- a/training.ipynb
+++ b/training.ipynb
@@ -26,9 +26,10 @@
     "\n",
     "DATA_DIR = '/cluster/home/nteutschm/eqdetection/data/'\n",
     "RANDOM_STATE = 86\n",
-    "MODEL_TYPE = 'HistGradientBoosting' # IsolationForest HistGradientBoosting RandomForest\n",
+    "MODEL_TYPE = 'RandomForest' # IsolationForest HistGradientBoosting RandomForest\n",
     "MODEL_PATH = f'/cluster/scratch/nteutschm/eqdetection/models/{MODEL_TYPE}.pkl'\n",
-    "SAVE_PATH = f'/cluster/scratch/nteutschm/eqdetection/predictions/{MODEL_TYPE}.csv'"
+    "SAVE_PATH = f'/cluster/scratch/nteutschm/eqdetection/predictions/{MODEL_TYPE}.csv'\n",
+    "STORE_FEATURES = f'/cluster/scratch/nteutschm/eqdetection/features/{MODEL_TYPE}'"
    ]
   },
   {
@@ -179,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,11 +194,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "def clean_dataframes(dfs, missing_value_threshold=None):\n",
     "    \"\"\"\n",
     "    Cleans the dataframes by:\n",
@@ -255,16 +255,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Isolation Forest"
+    "# Machine Learning"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def extract_features(dfs, interpolate=True):\n",
+    "def extract_features(dfs, interpolate=True, chunk_size=21):\n",
     "    \"\"\"\n",
     "    Extracts relevant features from a list of dataframes, including displacement values, \n",
     "    errors, offsets, decay information, station locations, and heights.\n",
@@ -272,61 +272,82 @@
     "    Parameters:\n",
     "    dfs (list): List of dataframes with GNSS data.\n",
     "    interpolate (bool): Whether to interpolate missing values or retain `None`.\n",
+    "    chunk_size (int): Number of consecutive days to combine into one sample (row).\n",
     "\n",
     "    Returns:\n",
-    "    DataFrame: Combined dataframe with all extracted features.\n",
+    "    Tuple (DataFrame, list): Combined dataframe with extracted features, and the target vector.\n",
     "    \"\"\"\n",
-    "    feature_dfs = []\n",
-    "    components_offsets = ['n', 'e', 'u']\n",
+    "    feature_matrix = []\n",
+    "    target_vector = []\n",
+    "    components_offsets = ['n', 'e', 'u']  # North, East, Up\n",
+    "    \n",
+    "    #columns to include in creating the chunks\n",
+    "    #cols = ['N', 'E', 'U', 'N sig', 'E sig', 'U sig', 'CorrNE', 'CorrNU', 'CorrEU']\n",
+    "    cols = ['N', 'E', 'U']\n",
     "\n",
     "    for df in dfs:\n",
+    "        # Extract basic features (displacement, errors, correlations)\n",
     "        features = df[['N', 'E', 'U', 'N sig', 'E sig', 'U sig', 'CorrNE', 'CorrNU', 'CorrEU']].copy()\n",
-    "        \n",
+    "\n",
     "        if interpolate:\n",
     "            features.interpolate(method='time', inplace=True)\n",
     "\n",
+    "        # Get station location and height information\n",
     "        location = df.attrs.get('geometry')\n",
     "        if isinstance(location, Point):\n",
-    "            features['latitude'] = location.y\n",
-    "            features['longitude'] = location.x\n",
+    "            latitude, longitude = location.y, location.x\n",
+    "        else:\n",
+    "            latitude, longitude = None, None\n",
+    "        height = df.attrs.get('height', None)\n",
     "\n",
-    "        features['height'] = df.attrs.get('height')\n",
-    "        \n",
+    "        # Extract offsets and decay information for each component\n",
     "        for comp in components_offsets:\n",
-    "            offset_series = pd.Series(0.0 if interpolate else None, index=df.index)\n",
-    "            offset_error_series = pd.Series(0.0 if interpolate else None, index=df.index)\n",
+    "            series_names = ['offset_value', 'offset_error', 'decay_value', 'decay_error', 'decay_tau', 'decay_type']\n",
+    "            series_dict = {name: pd.Series(0.0 if interpolate else None, dtype='float64', index=df.index) for name in series_names}\n",
+    "            series_dict['decay_type'] = pd.Series(0.0, dtype='int64', index=df.index)  # decay_type should be int\n",
     "\n",
     "            for offset in df.attrs['offsets'][comp]['offsets']:\n",
-    "                offset_series.loc[offset['date']] = offset['value']\n",
-    "                offset_error_series.loc[offset['date']] = offset['error']\n",
-    "\n",
-    "            features[f'{comp}_offset_value'] = offset_series\n",
-    "            features[f'{comp}_offset_error'] = offset_error_series\n",
-    "        \n",
-    "        for comp in components_offsets:\n",
-    "            decay_value_series = pd.Series(0.0 if interpolate else None, index=df.index)\n",
-    "            decay_tau_series = pd.Series(0.0 if interpolate else None, index=df.index)\n",
-    "            decay_error_series = pd.Series(0.0 if interpolate else None, index=df.index)\n",
-    "            decay_type_series = pd.Series(0.0 if interpolate else None, index=df.index)\n",
+    "                series_dict['offset_value'].loc[offset['date']] = offset['value']\n",
+    "                series_dict['offset_error'].loc[offset['date']] = offset['error']\n",
     "\n",
     "            for decay in df.attrs['offsets'][comp]['ps_decays']:\n",
-    "                decay_value_series.loc[decay['date']] = decay['value']\n",
-    "                decay_error_series.loc[decay['date']] = decay['error']\n",
-    "                decay_tau_series.loc[decay['date']] = decay['tau']\n",
-    "                decay_type_series.loc[decay['date']] = 1 if decay['type'] == 'logarithmic' else 2 if decay['type'] == 'exponential' else 0\n",
-    "            features[f'{comp}_decay_value'] = decay_value_series\n",
-    "            features[f'{comp}_decay_error'] = decay_error_series\n",
-    "            features[f'{comp}_decay_tau'] = decay_tau_series\n",
-    "            features[f'{comp}_decay_type'] = decay_type_series\n",
-    "        \n",
-    "        feature_dfs.append(features)\n",
-    "    \n",
-    "    return feature_dfs"
+    "                series_dict['decay_value'].loc[decay['date']] = decay['value']\n",
+    "                series_dict['decay_error'].loc[decay['date']] = decay['error']\n",
+    "                series_dict['decay_tau'].loc[decay['date']] = decay['tau']\n",
+    "                series_dict['decay_type'].loc[decay['date']] = 1 if decay['type'] == 'logarithmic' else 2\n",
+    "\n",
+    "            # Add series to features\n",
+    "            for name, series in series_dict.items():\n",
+    "                features[f'{comp}_{name}'] = series\n",
+    "\n",
+    "        # Add station metadata (location and height)\n",
+    "        features['latitude'] = latitude\n",
+    "        features['longitude'] = longitude\n",
+    "        features['height'] = height\n",
+    "\n",
+    "        # Create the feature matrix with chunking\n",
+    "        for i in range(len(features) - chunk_size + 1):\n",
+    "            # Create a chunk of size `chunk_size` for each feature (ignore offsets and decays as it takes too much memory (more than 80GB))\n",
+    "            #feature_row = np.hstack([features[col].values[i:i + chunk_size] for col in features.columns])\n",
+    "            feature_row = np.hstack([features[col].values[i:i + chunk_size] for col in cols])\n",
+    "\n",
+    "            # Add the row to the feature matrix\n",
+    "            feature_matrix.append(feature_row)\n",
+    "\n",
+    "            # Determine the target value for this chunk: index of earthquake or 0 if none\n",
+    "            offset_values_chunk = features[['n_offset_value', 'e_offset_value', 'u_offset_value']].iloc[i:i + chunk_size]\n",
+    "            if (offset_values_chunk != 0).any().any():\n",
+    "                target_vector.append(1)  # earthquake/discontinuity in this chunk\n",
+    "            else:\n",
+    "                target_vector.append(0)  # no discontinuity\n",
+    "\n",
+    "    feature_matrix = np.array(feature_matrix)\n",
+    "    return pd.DataFrame(feature_matrix), target_vector"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,45 +362,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def prepare_data(X):\n",
+    "def prepare_data(X, y, test_size=0.3, random_state=42):\n",
+    "    \"\"\"\n",
+    "    Prepares training and testing data by splitting the feature matrix and target vector.\n",
+    "\n",
+    "    Parameters:\n",
+    "    X (DataFrame): The feature matrix (chunked GNSS data).\n",
+    "    y (list or Series): The target labels (0 for no offset, 1 for offset).\n",
+    "    test_size (float): Proportion of the dataset to include in the test split.\n",
+    "    random_state (int): Random seed for reproducibility.\n",
+    "\n",
+    "    Returns:\n",
+    "    X_train (DataFrame): Training set feature matrix.\n",
+    "    X_test (DataFrame): Test set feature matrix.\n",
+    "    y_train (Series): Training set target vector.\n",
+    "    y_test (Series): Test set target vector.\n",
+    "    class_weights (dict): Weights for handling imbalanced classes.\n",
+    "    \"\"\"\n",
     "    # Split into train and test sets\n",
-    "    X_train, X_test = train_test_split(X, test_size=0.3, random_state=RANDOM_STATE)\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=test_size, random_state=random_state)\n",
     "    \n",
-    "    X_train = pd.concat(X_train, axis=0)\n",
-    "    X_test = pd.concat(X_test, axis=0)\n",
+    "    # Convert target lists to Pandas Series if necessary\n",
+    "    if isinstance(y_train, list):\n",
+    "        y_train = pd.Series(y_train)\n",
+    "    if isinstance(y_test, list):\n",
+    "        y_test = pd.Series(y_test)\n",
+    "\n",
+    "    # Compute class weights to handle imbalanced dataset\n",
+    "    class_weights = compute_weights(y_train)\n",
     "    \n",
-    "    # Create a binary target column indicating if any offset occurs in N, E, or U components\n",
-    "    train_labels = X_train[['n_offset_value', 'e_offset_value', 'u_offset_value']].apply(\n",
-    "    lambda row: 1 if any(val != 0 and not pd.isna(val) for val in row) else 0, axis=1)\n",
-    "    \n",
-    "    test_labels = X_test[['n_offset_value', 'e_offset_value', 'u_offset_value']].apply(\n",
-    "    lambda row: 1 if any(val != 0 and not pd.isna(val) for val in row) else 0, axis=1)\n",
-    "    \n",
-    "    class_weights = compute_weights(train_labels)\n",
-    "    \n",
-    "    return X_train, X_test, train_labels, test_labels, class_weights"
+    "    return X_train, X_test, y_train, y_test, class_weights"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "def optimize_random_forest(X_train, y_train, weights):\n",
     "    param_grid = {\n",
-    "        'n_estimators': [100, 200, 500],\n",
-    "        'max_depth': [10, 20, 30],\n",
-    "        'class_weight': [weights],  # Use the pre-calculated class weights\n",
+    "        'n_estimators': [100, 500],\n",
+    "        'max_depth': [10, 30],\n",
+    "        'class_weight': [weights], \n",
     "        'random_state': [RANDOM_STATE]\n",
     "    }\n",
     "    rf = RandomForestClassifier()\n",
     "    stratified_cv = StratifiedKFold(n_splits=5, shuffle=True, random_state=RANDOM_STATE)\n",
-    "    grid_search = GridSearchCV(rf, param_grid, cv=stratified_cv, scoring='f1_weighted', verbose=1, n_jobs=-1, pre_dispatch='2*n_jobs')\n",
+    "    grid_search = GridSearchCV(rf, param_grid, cv=stratified_cv, scoring='f1_weighted', verbose=3, n_jobs=-1, pre_dispatch='2*n_jobs')\n",
     "    grid_search.fit(X_train, y_train)\n",
     "    \n",
     "    print(\"Best RandomForest parameters found: \", grid_search.best_params_)\n",
@@ -390,7 +424,7 @@
     "    param_grid = {\n",
     "        'n_estimators': [100, 200, 300],\n",
     "        'max_samples': [0.8, 1.0],\n",
-    "        'contamination': [0.001, 0.002, 0.005],  # Based on known imbalance\n",
+    "        'contamination': [0.001, 0.002, 0.005],\n",
     "        'random_state': [RANDOM_STATE]\n",
     "    }\n",
     "    iso_forest = IsolationForest()\n",
@@ -432,11 +466,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train_model(X, model_type):\n",
+    "def train_model(X, y, model_type):\n",
     "    \"\"\"\n",
     "    Trains a model based on the specified type using both North, East, and Up component data.\n",
     "\n",
@@ -450,31 +484,31 @@
     "    report: Classification report for the test set.\n",
     "    \"\"\"\n",
     "    \n",
-    "    X_train, X_test, train_labels, test_labels, weights = prepare_data(X)\n",
+    "    X_train, X_test, train_labels, test_labels, weights = prepare_data(X, y)\n",
     "    \n",
     "    # Imbalance test: No offsets: 2133084, offsets: 525\n",
     "\n",
     "    # Set offset/decay columns based on model type\n",
     "    if model_type == 'IsolationForest':\n",
     "        # For IsolationForest, ignore decays and offset information (unsupervised)\n",
-    "        columns = [col for col in X_test.columns if 'offset' in col or 'decay' in col]\n",
-    "        X_test.drop(columns, axis=1, inplace=True)\n",
-    "        X_train.drop(columns, axis=1, inplace=True)\n",
+    "        #columns = [col for col in X_test.columns if 'offset' in col or 'decay' in col]\n",
+    "        #X_test.drop(columns, axis=1, inplace=True)\n",
+    "        #X_train.drop(columns, axis=1, inplace=True)\n",
     "        model = optimize_isolation_forest(X_train, train_labels)\n",
     "        test_predictions = model.predict(X_test)\n",
     "        \n",
     "    elif model_type == 'RandomForest':\n",
     "        # For RandomForest, ignore decays and offset information\n",
-    "        columns = [col for col in X_test.columns if 'offset' in col or 'decay' in col]\n",
-    "        X_test.drop(columns, axis=1, inplace=True)\n",
-    "        X_train.drop(columns, axis=1, inplace=True)\n",
+    "        #columns = [col for col in X_test.columns if 'offset' in col or 'decay' in col]\n",
+    "        #X_test.drop(columns, axis=1, inplace=True)\n",
+    "        #X_train.drop(columns, axis=1, inplace=True)\n",
     "        model = optimize_random_forest(X_train, train_labels, weights)\n",
     "        test_predictions = model.predict(X_test)\n",
     "        \n",
     "    \n",
     "    elif model_type == 'HistGradientBoosting':\n",
     "        # For HistGradientBoosting, set offset and decay columns to None in test data (supervised using binary training labels)\n",
-    "        X_test[[col for col in X_test.columns if 'offset' in col or 'decay' in col]] = None\n",
+    "        #X_test[[col for col in X_test.columns if 'offset' in col or 'decay' in col]] = None\n",
     "        model = optimize_hist_gradient_boosting(X_train, train_labels, weights)\n",
     "        test_predictions = model.predict(X_test)\n",
     "        \n",
@@ -497,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -508,21 +542,35 @@
     "        if file_path.is_file():\n",
     "            dfs.append(read_file(file_path.name))\n",
     "\n",
-    "    cleaned_dfs = clean_dataframes(dfs, missing_value_threshold=0.2)\n",
+    "    cleaned_dfs = clean_dataframes(dfs, missing_value_threshold=0.05)\n",
     "    \n",
     "    # HistGradientBoosting designed to deal with None data -> No interpolation needed\n",
     "    interpolate = False if MODEL_TYPE == 'HistGradientBoosting' else True\n",
-    "    X = extract_features(cleaned_dfs, interpolate=interpolate)\n",
+    "    X, y = extract_features(cleaned_dfs, interpolate=interpolate)\n",
     "    \n",
-    "    model, test_predictions, report = train_model(X, model_type=MODEL_TYPE)\n",
+    "    X.to_csv(f'{STORE_FEATURES}_features.csv', index=True)\n",
+    "    pd.Series(y).to_csv(f'{STORE_FEATURES}_target.csv', index=False, header=False)\n",
+    "    \n",
+    "    model, test_predictions, report = train_model(X, y, model_type=MODEL_TYPE)\n",
     "    print(f'Report for model: {MODEL_TYPE} \\n {report}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"if __name__=='__main__':\\n    main()\""
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "if __name__=='__main__':\n",
     "    main()"
@@ -531,7 +579,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "proj",
    "language": "python",
    "name": "python3"
   },
@@ -545,9 +593,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 2
 }
